alignment fixes

--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -71,6 +71,7 @@
 }
 .simpleTxt {
   color: black;
+  text-align: center;
 }
 .linkStyle {
   color: blue;
